--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 name = "symposium-booklet"
 version = "0.1.0"
 edition = "2024"
-author = "Frederik Kirk"
+authors = ["Frederik Kirk"]
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
-calamine = "0.19"
+calamine = "0.32"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
@@ -21,4 +21,4 @@ toml = "0.5"
 tempfile = "3.3"
 assert_cmd = "2"
 predicates = "2"
-umya-spreadsheet = { version = "0.6", optional = false }
+umya-spreadsheet = { version = "2.3", optional = false }
